* io.c (argf_close): skip stdin, which should be readable again.   [ruby-dev:45160] [Bug #5952] * io.c (argf_readlines): reinitialize after all read to be   readable again.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34409 b2dd03c8-39d4-4d8f-98ff-823fe69b080e